# Rust-RISCV-emulator

./: Cargo.toml  README.md
src/: cpu.rs  lib.rs  main.rs  memory.rs
src/codegen/: mod.rs
src/cpu/: alu.rs  mod.rs  register.rs
test/: test.asm
