[package]
name = "rust_cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
nom = "7.1.2"

[[bin]]
name = "rust_cpu"
path = "src/main.rs"

[[bin]]
name = "asm_tool"
path = "src/bin/asm_tool.rs"
